Moved embedded project to compile for STM32L432KB

--- a/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj
+++ b/vs/ChimeraStaticLibrary/ChimeraStaticLibrary/ChimeraStaticLibrary.vcxproj
@@ -404,6 +404,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Standalone|STM32F446RE'">
     <ToolchainID>com.visualgdb.arm-eabi</ToolchainID>
     <ToolchainVersion>9.3.1/9.2.0/r2</ToolchainVersion>
+    <MCUPropertyListFile>$(ProjectDir)stm32.props</MCUPropertyListFile>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|VisualGDB'">
     <ClCompile>
