Add CMakeLists.txt for all drivers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,9 @@
 # ====================================================
+# Import sub-projects
+# ====================================================
+add_subdirectory("Chimera")
+
+# ====================================================
 # Various exports
 # ====================================================
 
@@ -8,6 +13,9 @@ target_include_directories(chimera_inc INTERFACE ".")
 
 if(FREERTOS)
   target_compile_definitions(chimera_inc INTERFACE USING_FREERTOS_THREADS)
+  target_link_libraries(chimera_inc INTERFACE freertos_inc)
+  target_link_libraries(chimera_inc INTERFACE freertos_port)
+  target_link_libraries(chimera_inc INTERFACE freertos_cfg)
 endif()
 
 export(TARGETS chimera_inc FILE "${PROJECT_BINARY_DIR}/Chimera/chimera-inc.cmake")
