Update build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,32 @@
+# =============================================================================
+# Description:
+#   Primary CMake entry point for building Chimera
+#
+# Exports:
+#   chimera_inc: Interface target for getting public headers and macro defs
+#
+# 2020 | Brandon Braun | brandonbraun653@gmail.com
+# =============================================================================
 # ====================================================
 # Import sub-projects
 # ====================================================
 add_subdirectory("Chimera")
 
 # ====================================================
-# Various exports
+# Public Headers
 # ====================================================
+set(PUB_HDR chimera_inc)
+add_library(${PUB_HDR} INTERFACE)
+target_include_directories(${PUB_HDR} INTERFACE ".")
 
-# Public include location
-add_library(chimera_inc INTERFACE)
-target_include_directories(chimera_inc INTERFACE ".")
-
-if(FREERTOS)
-  target_compile_definitions(chimera_inc INTERFACE USING_FREERTOS_THREADS)
-  target_link_libraries(chimera_inc INTERFACE freertos_inc)
-  target_link_libraries(chimera_inc INTERFACE freertos_port)
-  target_link_libraries(chimera_inc INTERFACE freertos_cfg)
+# Select the appropriate threading interface (if any)
+if(Toolchain::REQUIRES_THREAD_FREERTOS)
+  target_compile_definitions(${PUB_HDR} INTERFACE USING_FREERTOS_THREADS)
+  target_link_libraries(${PUB_HDR} INTERFACE freertos_inc)
+  target_link_libraries(${PUB_HDR} INTERFACE freertos_port)
+  target_link_libraries(${PUB_HDR} INTERFACE freertos_cfg)
+elseif(Toolchain::REQUIRES_THREAD_NATIVE)
+  target_compile_definitions(${PUB_HDR} INTERFACE USING_NATIVE_THREADS)
 endif()
 
-export(TARGETS chimera_inc FILE "${PROJECT_BINARY_DIR}/Chimera/chimera-inc.cmake")
+export(TARGETS ${PUB_HDR} FILE "${PROJECT_BINARY_DIR}/Chimera/${PUB_HDR}.cmake")
