Update build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,12 +20,12 @@ add_library(${PUB_HDR} INTERFACE)
 target_include_directories(${PUB_HDR} INTERFACE ".")
 
 # Select the appropriate threading interface (if any)
-if(Toolchain::REQUIRES_THREAD_FREERTOS)
+if(Toolchain::REQUIRES_FREERTOS_THREADS)
   target_compile_definitions(${PUB_HDR} INTERFACE USING_FREERTOS_THREADS)
   target_link_libraries(${PUB_HDR} INTERFACE freertos_inc)
   target_link_libraries(${PUB_HDR} INTERFACE freertos_port)
   target_link_libraries(${PUB_HDR} INTERFACE freertos_cfg)
-elseif(Toolchain::REQUIRES_THREAD_NATIVE)
+elseif(Toolchain::REQUIRES_NATIVE_THREADS)
   target_compile_definitions(${PUB_HDR} INTERFACE USING_NATIVE_THREADS)
 endif()
 
