Clean up the interface. Support test drivers.

--- a/Chimera/CMakeLists.txt
+++ b/Chimera/CMakeLists.txt
@@ -20,6 +20,7 @@ target_link_libraries(${CHIMERA_SRC} INTERFACE
   chimera_serial
   chimera_system
   chimera_threading
+  chimera_peripheral_can
   chimera_peripheral_clock
   chimera_peripheral_crc
   chimera_peripheral_dma
