--- a/Chimera/src/threading/stl/CMakeLists.txt
+++ b/Chimera/src/threading/stl/CMakeLists.txt
@@ -12,6 +12,7 @@ set(LINK_LIBS
 set(CHIMERA chimera_threading_stl)
 add_library(${CHIMERA} STATIC
   stl_threading_implementation.cpp
+  stl_queue_implementation.cpp
 )
 target_link_libraries(${CHIMERA} PRIVATE ${LINK_LIBS})
 export(TARGETS ${CHIMERA} FILE "${PROJECT_BINARY_DIR}/Chimera/src/${CHIMERA}.cmake")
