--- a/Chimera/src/common/CMakeLists.txt
+++ b/Chimera/src/common/CMakeLists.txt
@@ -5,7 +5,7 @@ set(LINK_LIBS
   aurora_inc        # Aurora public headers
   Boost::boost      # Boost public headers
   chimera_inc       # Chimera public headers
-  prj_device_target # Compiler options for target device
+  chimera_build_options
 )
 
 # ====================================================
