--- a/Chimera/src/pwm/CMakeLists.txt
+++ b/Chimera/src/pwm/CMakeLists.txt
@@ -4,7 +4,7 @@
 set(LINK_LIBS
   aurora_inc        # Aurora public headers
   chimera_inc       # Chimera public headers
-  prj_device_target # Compiler options for target device
+  chimera_build_options
 )
 
 # ====================================================
