--- a/source/drivers/peripherals/CMakeLists.txt
+++ b/source/drivers/peripherals/CMakeLists.txt
@@ -12,4 +12,5 @@ add_subdirectory("spi")
 add_subdirectory("timer")
 add_subdirectory("uart")
 add_subdirectory("usart")
+add_subdirectory("usb")
 add_subdirectory("watchdog")
