--- a/source/drivers/CMakeLists.txt
+++ b/source/drivers/CMakeLists.txt
@@ -15,4 +15,5 @@ add_subdirectory("scheduler")
 add_subdirectory("serial")
 add_subdirectory("system")
 add_subdirectory("threading")
+add_subdirectory("usb")
 add_subdirectory("utilities")
