Cherry pick usb_driver/r0 and squash.

--- a/source/drivers/threading/CMakeLists.txt
+++ b/source/drivers/threading/CMakeLists.txt
@@ -1,6 +1,7 @@
 # ====================================================
 # Import sub-projects
 # ====================================================
+add_subdirectory("common")
 add_subdirectory("freertos")
 add_subdirectory("stl")
 
@@ -9,6 +10,7 @@ add_subdirectory("stl")
 # Exports
 # ====================================================
 add_library(chimera_threading INTERFACE)
+target_link_libraries(chimera_threading INTERFACE chimera_threading_common)
 
 if(Toolchain::REQUIRES_FREERTOS_THREADS)
   target_link_libraries(chimera_threading INTERFACE chimera_threading_freertos)
