Added initial ADC driver interface skeleton #27

--- a/source/drivers/peripherals/adc/CMakeLists.txt
+++ b/source/drivers/peripherals/adc/CMakeLists.txt
@@ -2,7 +2,6 @@
 # Common
 # ====================================================
 set(LINK_LIBS
-  aurora_inc        # Aurora public headers
   chimera_inc       # Chimera public headers
   chimera_build_options
 )
@@ -10,9 +9,9 @@ set(LINK_LIBS
 # ====================================================
 # Interface Library
 # ====================================================
-set(CHIMERA chimera_utilities)
-add_library(${CHIMERA} STATIC
-  chimera_utilities.cpp
+set(CHIMERA_DRIVER chimera_peripheral_adc)
+add_library(${CHIMERA_DRIVER} STATIC
+  chimera_adc.cpp
 )
-target_link_libraries(${CHIMERA} PRIVATE ${LINK_LIBS})
-export(TARGETS ${CHIMERA} FILE "${PROJECT_BINARY_DIR}/Chimera/src/${CHIMERA}.cmake")
+target_link_libraries(${CHIMERA_DRIVER} PRIVATE ${LINK_LIBS})
+export(TARGETS ${CHIMERA_DRIVER} FILE "${PROJECT_BINARY_DIR}/Chimera/src/${CHIMERA_DRIVER}.cmake")
