--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -21,6 +21,7 @@ target_link_libraries(${CHIMERA_SRC} INTERFACE
   chimera_serial
   chimera_system
   chimera_threading
+  chimera_utilities
   chimera_peripheral_can
   chimera_peripheral_clock
   chimera_peripheral_crc
