--- a/source/drivers/common/CMakeLists.txt
+++ b/source/drivers/common/CMakeLists.txt
@@ -1,3 +1,5 @@
+include("${COMMON_TOOL_ROOT}/cmake/utility/embedded.cmake")
+
 # ====================================================
 # Common
 # ====================================================
@@ -5,17 +7,20 @@ set(LINK_LIBS
   aurora_inc        # Aurora public headers
   Boost::boost      # Boost public headers
   chimera_inc       # Chimera public headers
-  chimera_build_options
 )
 
 # ====================================================
 # Interface Library
 # ====================================================
-set(CHIMERA chimera_common)
-add_library(${CHIMERA} STATIC
-  boost_stubs.cpp
-  chimera.cpp
-  compiler_intf.cpp
-)
-target_link_libraries(${CHIMERA} PRIVATE ${LINK_LIBS})
-export(TARGETS ${CHIMERA} FILE "${PROJECT_BINARY_DIR}/Chimera/src/${CHIMERA}.cmake")
+function(build_library variant)
+  set(CHIMERA chimera_common${variant})
+  add_library(${CHIMERA} STATIC
+    boost_stubs.cpp
+    chimera.cpp
+    compiler_intf.cpp
+  )
+  target_link_libraries(${CHIMERA} PRIVATE ${LINK_LIBS} prj_build_target${variant} prj_device_target)
+  export(TARGETS ${CHIMERA} FILE "${PROJECT_BINARY_DIR}/Chimera/src/${CHIMERA}.cmake")
+endfunction()
+
+add_target_variants(build_library)
