--- a/source/drivers/scheduler/CMakeLists.txt
+++ b/source/drivers/scheduler/CMakeLists.txt
@@ -1,18 +1,23 @@
+include("${COMMON_TOOL_ROOT}/cmake/utility/embedded.cmake")
+
 # ====================================================
 # Common
 # ====================================================
 set(LINK_LIBS
   aurora_inc
   chimera_inc       # Chimera public headers
-  chimera_build_options
 )
 
 # ====================================================
 # Interface Library
 # ====================================================
-set(CHIMERA chimera_scheduler_low_res)
-add_library(${CHIMERA} STATIC
-  scheduler_low_res.cpp
-)
-target_link_libraries(${CHIMERA} PRIVATE ${LINK_LIBS})
-export(TARGETS ${CHIMERA} FILE "${PROJECT_BINARY_DIR}/Chimera/src/${CHIMERA}.cmake")
+function(build_library variant)
+  set(CHIMERA chimera_scheduler_low_res${variant})
+  add_library(${CHIMERA} STATIC
+    scheduler_low_res.cpp
+  )
+  target_link_libraries(${CHIMERA} PRIVATE ${LINK_LIBS} prj_build_target${variant} prj_device_target)
+  export(TARGETS ${CHIMERA} FILE "${PROJECT_BINARY_DIR}/Chimera/src/${CHIMERA}.cmake")
+endfunction()
+
+add_target_variants(build_library)
