--- a/source/drivers/threading/freertos/CMakeLists.txt
+++ b/source/drivers/threading/freertos/CMakeLists.txt
@@ -1,21 +1,26 @@
+include("${COMMON_TOOL_ROOT}/cmake/utility/embedded.cmake")
+
 # ====================================================
 # Common
 # ====================================================
 set(LINK_LIBS
   chimera_inc       # Chimera public headers
-  chimera_build_options
 )
 
 # ====================================================
 # Interface Library
 # ====================================================
-set(CHIMERA chimera_threading_freertos)
-add_library(${CHIMERA} STATIC
-  freertos_hooks.cpp
-  freertos_mutex.cpp
-  freertos_queue.cpp
-  freertos_semaphore.cpp
-  freertos_thread.cpp
-)
-target_link_libraries(${CHIMERA} PRIVATE ${LINK_LIBS})
-export(TARGETS ${CHIMERA} FILE "${PROJECT_BINARY_DIR}/Chimera/src/${CHIMERA}.cmake")
+function(build_library variant)
+  set(CHIMERA chimera_threading_freertos${variant})
+  add_library(${CHIMERA} STATIC
+    freertos_hooks.cpp
+    freertos_mutex.cpp
+    freertos_queue.cpp
+    freertos_semaphore.cpp
+    freertos_thread.cpp
+  )
+  target_link_libraries(${CHIMERA} PRIVATE ${LINK_LIBS} prj_build_target${variant} prj_device_target)
+  export(TARGETS ${CHIMERA} FILE "${PROJECT_BINARY_DIR}/Chimera/src/${CHIMERA}.cmake")
+endfunction()
+
+add_target_variants(build_library)
