--- a/source/drivers/CMakeLists.txt
+++ b/source/drivers/CMakeLists.txt
@@ -3,6 +3,7 @@
 # ====================================================
 add_subdirectory("algorithm")
 add_subdirectory("allocator")
+add_subdirectory("assert")
 add_subdirectory("buffer")
 add_subdirectory("callback")
 add_subdirectory("common")
