--- a/source/drivers/pwm/CMakeLists.txt
+++ b/source/drivers/pwm/CMakeLists.txt
@@ -4,8 +4,8 @@ include("${COMMON_TOOL_ROOT}/cmake/utility/embedded.cmake")
 # Common
 # ====================================================
 set(LINK_LIBS
-  aurora_inc        # Aurora public headers
-  chimera_inc       # Chimera public headers
+  aurora_intf_inc        # Aurora public headers
+  chimera_intf_inc       # Chimera public headers
 )
 
 # ====================================================
