--- a/source/drivers/peripherals/power/CMakeLists.txt
+++ b/source/drivers/peripherals/power/CMakeLists.txt
@@ -4,7 +4,7 @@ include("${COMMON_TOOL_ROOT}/cmake/utility/embedded.cmake")
 # Common
 # ====================================================
 set(LINK_LIBS
-  chimera_inc       # Chimera public headers
+  chimera_intf_inc       # Chimera public headers
 )
 
 # ====================================================
