--- a/source/drivers/peripherals/uart/CMakeLists.txt
+++ b/source/drivers/peripherals/uart/CMakeLists.txt
@@ -5,7 +5,7 @@ include("${COMMON_TOOL_ROOT}/cmake/utility/embedded.cmake")
 # ====================================================
 set(LINK_LIBS
   Boost::boost
-  chimera_inc       # Chimera public headers
+  chimera_intf_inc       # Chimera public headers
 )
 
 # ====================================================
