--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -29,6 +29,7 @@ set(all_libraries
   chimera_peripheral_dma
   chimera_peripheral_exti
   chimera_peripheral_gpio
+  chimera_peripheral_interrupt
   chimera_peripheral_power
   chimera_peripheral_spi
   chimera_peripheral_timer
