--- a/source/drivers/threading/common/CMakeLists.txt
+++ b/source/drivers/threading/common/CMakeLists.txt
@@ -1,22 +1,12 @@
 include("${COMMON_TOOL_ROOT}/cmake/utility/embedded.cmake")
 
-# ====================================================
-# Common
-# ====================================================
-set(LINK_LIBS
-  chimera_intf_inc       # Chimera public headers
-)
-
-# ====================================================
-# Interface Library
-# ====================================================
-function(build_library variant)
-  set(CHIMERA chimera_threading_common${variant})
-  add_library(${CHIMERA} STATIC
+gen_static_lib_variants(
+  TARGET
+    chimera_threading_common
+  SOURCES
     threading_thread.cpp
-  )
-  target_link_libraries(${CHIMERA} PRIVATE ${LINK_LIBS} prj_build_target${variant} prj_device_target)
-  export(TARGETS ${CHIMERA} FILE "${PROJECT_BINARY_DIR}/Chimera/src/${CHIMERA}.cmake")
-endfunction()
-
-add_target_variants(build_library)
+  PRV_LIBRARIES
+    chimera_intf_inc
+  EXPORT_DIR
+    "${PROJECT_BINARY_DIR}/Chimera"
+)
