--- a/source/drivers/threading/stl/CMakeLists.txt
+++ b/source/drivers/threading/stl/CMakeLists.txt
@@ -1,23 +1,15 @@
 include("${COMMON_TOOL_ROOT}/cmake/utility/embedded.cmake")
 
-# ====================================================
-# Common
-# ====================================================
-set(LINK_LIBS
-  chimera_intf_inc       # Chimera public headers
+gen_static_lib_variants(
+  TARGET
+    chimera_threading_stl
+  SOURCES
+    stl_mutex.cpp
+    stl_queue.cpp
+    stl_semaphore.cpp
+    stl_thread.cpp
+  PRV_LIBRARIES
+    chimera_intf_inc
+  EXPORT_DIR
+    "${PROJECT_BINARY_DIR}/Chimera"
 )
-
-# ====================================================
-# Interface Library
-# ====================================================
-function(build_library variant)
-  set(CHIMERA chimera_threading_stl${variant})
-  add_library(${CHIMERA} STATIC
-    stl_threading_implementation.cpp
-    stl_queue_implementation.cpp
-  )
-  target_link_libraries(${CHIMERA} PRIVATE ${LINK_LIBS} prj_build_target${variant} prj_device_target)
-  export(TARGETS ${CHIMERA} FILE "${PROJECT_BINARY_DIR}/Chimera/src/${CHIMERA}.cmake")
-endfunction()
-
-add_target_variants(build_library)
