Update build system to reference Aurora headers

--- a/source/drivers/threading/freertos/CMakeLists.txt
+++ b/source/drivers/threading/freertos/CMakeLists.txt
@@ -10,6 +10,7 @@ gen_static_lib_variants(
     freertos_thread.cpp
   PRV_LIBRARIES
     chimera_intf_inc
+    aurora_intf_inc
   EXPORT_DIR
     "${PROJECT_BINARY_DIR}/Chimera"
 )
