--- a/source/drivers/threading/common/CMakeLists.txt
+++ b/source/drivers/threading/common/CMakeLists.txt
@@ -7,6 +7,7 @@ gen_static_lib_variants(
     threading_thread.cpp
   PRV_LIBRARIES
     chimera_intf_inc
+    aurora_intf_inc
   EXPORT_DIR
     "${PROJECT_BINARY_DIR}/Chimera"
 )
