--- a/source/drivers/threading/stl/CMakeLists.txt
+++ b/source/drivers/threading/stl/CMakeLists.txt
@@ -8,6 +8,7 @@ gen_static_lib_variants(
     stl_semaphore.cpp
     stl_thread.cpp
   PRV_LIBRARIES
+    aurora_intf_inc
     chimera_intf_inc
   EXPORT_DIR
     "${PROJECT_BINARY_DIR}/Chimera"
