--- a/source/drivers/peripherals/CMakeLists.txt
+++ b/source/drivers/peripherals/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory("crc")
 add_subdirectory("dma")
 add_subdirectory("exti")
 add_subdirectory("gpio")
+add_subdirectory("i2c")
 add_subdirectory("interrupt")
 add_subdirectory("power")
 add_subdirectory("spi")
