--- a/source/drivers/scheduler/CMakeLists.txt
+++ b/source/drivers/scheduler/CMakeLists.txt
@@ -1,23 +1,14 @@
 include("${COMMON_TOOL_ROOT}/cmake/utility/embedded.cmake")
 
-# ====================================================
-# Common
-# ====================================================
-set(LINK_LIBS
-  aurora_intf_inc
-  chimera_intf_inc       # Chimera public headers
-)
-
-# ====================================================
-# Interface Library
-# ====================================================
-function(build_library variant)
-  set(CHIMERA chimera_scheduler_low_res${variant})
-  add_library(${CHIMERA} STATIC
+gen_static_lib_variants(
+  TARGET
+    chimera_scheduler
+  SOURCES
     scheduler_low_res.cpp
-  )
-  target_link_libraries(${CHIMERA} PRIVATE ${LINK_LIBS} prj_build_target${variant} prj_device_target)
-  export(TARGETS ${CHIMERA} FILE "${PROJECT_BINARY_DIR}/Chimera/src/${CHIMERA}.cmake")
-endfunction()
-
-add_target_variants(build_library)
+    scheduler_polling.cpp
+  PRV_LIBRARIES
+    aurora_intf_inc
+    chimera_intf_inc
+  EXPORT_DIR
+    "${PROJECT_BINARY_DIR}/Chimera/src"
+)
