--- a/source/drivers/peripherals/uart/CMakeLists.txt
+++ b/source/drivers/peripherals/uart/CMakeLists.txt
@@ -1,23 +1,15 @@
 include("${COMMON_TOOL_ROOT}/cmake/utility/embedded.cmake")
 
-# ====================================================
-# Common
-# ====================================================
-set(LINK_LIBS
-  chimera_intf_inc       # Chimera public headers
-  aurora_intf_inc
-)
-
-# ====================================================
-# Interface Library
-# ====================================================
-function(build_library variant)
-  set(CHIMERA chimera_peripheral_uart${variant})
-  add_library(${CHIMERA} STATIC
+gen_static_lib_variants(
+  TARGET
+    chimera_peripheral_uart
+  SOURCES
     chimera_uart.cpp
-  )
-  target_link_libraries(${CHIMERA} PRIVATE ${LINK_LIBS} prj_build_target${variant} prj_device_target)
-  export(TARGETS ${CHIMERA} FILE "${PROJECT_BINARY_DIR}/Chimera/src/${CHIMERA}.cmake")
-endfunction()
-
-add_target_variants(build_library)
+  PRV_LIBRARIES
+    aurora_intf_inc
+    chimera_intf_inc
+    thor_intf_inc
+    lld_common_inc
+  EXPORT_DIR
+    "${PROJECT_BINARY_DIR}/Chimera/uart"
+)
