--- a/source/drivers/peripherals/CMakeLists.txt
+++ b/source/drivers/peripherals/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory("gpio")
 add_subdirectory("i2c")
 add_subdirectory("interrupt")
 add_subdirectory("power")
+add_subdirectory("sdio")
 add_subdirectory("spi")
 add_subdirectory("timer")
 add_subdirectory("uart")
