Clean up some things to get compiling

--- a/source/drivers/common/CMakeLists.txt
+++ b/source/drivers/common/CMakeLists.txt
@@ -1,26 +1,14 @@
 include("${COMMON_TOOL_ROOT}/cmake/utility/embedded.cmake")
 
-# ====================================================
-# Common
-# ====================================================
-set(LINK_LIBS
-  aurora_intf_inc        # Aurora public headers
-        # Boost public headers
-  chimera_intf_inc       # Chimera public headers
-)
-
-# ====================================================
-# Interface Library
-# ====================================================
-function(build_library variant)
-  set(CHIMERA chimera_common${variant})
-  add_library(${CHIMERA} STATIC
-    boost_stubs.cpp
+gen_static_lib_variants(
+  TARGET
+    chimera_common
+  SOURCES
     chimera.cpp
     compiler_intf.cpp
-  )
-  target_link_libraries(${CHIMERA} PRIVATE ${LINK_LIBS} prj_build_target${variant} prj_device_target)
-  export(TARGETS ${CHIMERA} FILE "${PROJECT_BINARY_DIR}/Chimera/src/${CHIMERA}.cmake")
-endfunction()
-
-add_target_variants(build_library)
+  PRV_LIBRARIES
+    aurora_intf_inc
+    chimera_intf_inc
+  EXPORT_DIR
+    "${PROJECT_BINARY_DIR}/Chimera/src"
+)
