Add support for SDIO

--- a/source/drivers/peripherals/sdio/CMakeLists.txt
+++ b/source/drivers/peripherals/sdio/CMakeLists.txt
@@ -2,13 +2,12 @@ include("${COMMON_TOOL_ROOT}/cmake/utility/embedded.cmake")
 
 gen_static_lib_variants(
   TARGET
-    chimera_common
+    chimera_peripheral_sdio
   SOURCES
-    chimera.cpp
-    compiler_intf.cpp
+    chimera_sdio.cpp
   PRV_LIBRARIES
-    aurora_intf_inc
     chimera_intf_inc
+    aurora_intf_inc
   EXPORT_DIR
-    "${PROJECT_BINARY_DIR}/Chimera/src"
+    "${PROJECT_BINARY_DIR}/Chimera/src/sdio"
 )
